--- a/API-REST-NODE/mongo/clase1.ipynb
+++ b/API-REST-NODE/mongo/clase1.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +401,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "flaskenv",
    "language": "python",
    "name": "python3"
   },
